# argus-events

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Notes.txt  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSIGNMENT.md  DEVELOPMENT.md
scripts/: build.sh
src/: cli.rs  lib.rs  main.rs
src/api/: events.rs  mod.rs
src/domain/: event.rs  event_query.rs  metrics.rs  mod.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/metrics/: mod.rs
src/infrastructure/metrics/noop/: mod.rs  noop_metrics.rs
src/infrastructure/metrics/prometheus/: counters.rs  mod.rs  prometheus_metrics.rs  recorder.rs
src/repository/: memory.rs  mod.rs  noop_repository.rs
tests/: integration.rs  metrics_endpoint.rs
